# abimca

./: .gitignore  CITATION.cff  LICENSE  README.md  lorenz.py  main.py  plotting.py  pyproject.toml  run_lorenz.py  run_synth.py  utils.py
abimca/: __init__.py  autoencoders.py  losses.py  subsequence_identifier.py
docs/: CONTRIBUTING.md
